UPDATE index.jsp falta poner que solo muestre la fecha si tenemos un producto p

--- a/TareaC-ValidacionBackend/Dockerfile
+++ b/TareaC-ValidacionBackend/Dockerfile
@@ -2,13 +2,13 @@
 FROM tomcat:9.0.58-jdk17-openjdk
 
 # Copy source files to tomcat folder structure
-COPY . /usr/local/tomcat/webapps/myApp
+COPY . /usr/local/tomcat/webapps/S&L
 
 # -cp, Adding compile time classpath as Tomcat's /lib/servlet-api.jar file.
 # - d, destination output location.
-RUN ["javac", "-cp", ".:/usr/local/tomcat/lib/servlet-api.jar", "-d", "/usr/local/tomcat/webapps/myApp/WEB-INF/classes/", "/usr/local/tomcat/webapps/myApp/src/TestingServlet.java"]
+RUN ["javac", "-cp", ".:/usr/local/tomcat/lib/servlet-api.jar", "-d", "/usr/local/tomcat/webapps/S&L/WEB-INF/classes/", "/usr/local/tomcat/webapps/S&L/src/ProcessDataInventaryFormServlet.java"]
 
-RUN ["javac", "-cp", ".:/usr/local/tomcat/lib/servlet-api.jar", "-d", "/usr/local/tomcat/webapps/myApp/WEB-INF/classes/", "/usr/local/tomcat/webapps/myApp/prueba_hora.jsp"]
+#RUN ["javac", "-cp", ".:/usr/local/tomcat/lib/servlet-api.jar", "-d", "/usr/local/tomcat/webapps/S&L/WEB-INF/classes/", "/usr/local/tomcat/webapps/S&L/index.jsp"]
 
 # Serve Tomcat
 EXPOSE 8080
